# nflows

./: .gitignore  AGENTS.md  ARCHITECTURE.md  EXTENDING.md  INTERNALS.md  README.md  REFERENCE.md  USAGE.md  pyproject.toml  report.md  technical_overview.md
nflows/: builders.py  distributions.py  flows.py  nets.py  scalar_function.py  splines.py  transforms.py
notebooks/: README.md  conditional_ring.ipynb  real_nvp_double_well_dim16.ipynb  real_nvp_neals_funnel.ipynb  spline_real_nvp_double_well_dim16.ipynb  spline_three_rings.ipynb
tests/: conftest.py  test_builders.py  test_conditional_flow.py  test_distributions.py  test_identity_gate.py  test_nets.py  test_splines.py  test_transforms.py
